--- a/css/main.css
+++ b/css/main.css
@@ -209,6 +209,59 @@ img {
     left: 0;
 }
 
+/* - - - - - - Burger - Menu - - - - - - */
+
+.burger {
+	position: relative;
+}
+
+.logo__burger {
+	padding: 42px 0 0 20px;
+	z-index: 99;
+}
+
+.active {
+	display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100vh;
+}
+
+.burger__menu_menu {
+	display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100vh;
+}
+
+.burger__menu {
+	width: 281px;
+	height: 100vh;
+	position: absolute;
+	top: -15px;
+	right: -30px;
+	z-index: 99;
+	background-color: #fff;
+	
+	display: none;
+}
+
+.menu__burger {
+	margin-bottom: auto;
+	font-size: 16px;
+	z-index: 99;
+}
+
+.menu__item_burger {s
+	width: 100%;
+	padding: 15px 31px 16px 20px;
+}
+
+.phone__burger {
+	margin-top: auto;
+	padding: 0 45px 40px 62px;
+}
+
 /* - - - - - - Header - Hover's - - - - - - */
 
 .logo:hover, .phone__link:hover {
