--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,12 @@ img {
 	letter-spacing: 0.01em;
 	font-size: 15px;
 	box-shadow: 0px 5px 20px rgba(0, 163, 255, 0.4);
+	border: none;
+}
+
+.btn:hover {
+	color: #fff;
+	box-shadow: 0px 5px 7px rgba(0, 163, 255, 0.4);
 }
 
 .btn:active {
@@ -660,20 +666,24 @@ img {
 
 .swiper-slide {
 	width: 100%;
+	width: 354px;
+	height: 415px;
 }
 
 .swiper-container {
-    max-width: 420px;
+    max-width: 1140px;
     margin-left: 0;
 }
 
 .slider__item {
-    position: relative;
+	position: relative;
+	width: 100%;
 }
 
 .slider__content {
 	width: 354px;
-    height: 415px;
+	height: 415px;
+	
     background: #FFF;
     box-shadow: 0px 5px 30px rgba(206, 218, 228, 0.6);
     border-radius: 2px;
@@ -1171,6 +1181,198 @@ img {
 	margin-right: 20px;
 }
 
+/* - - - - - - Company page start - - - - - - */
+
+/* - - - - - - Services page start - - - - - - */
+
+.services {
+	padding: 150px 0;
+}
+
+.services-tabs {
+	max-width: 370px;
+	width: 100%;
+	background-color: #F3F9FB;
+	padding: 50px 0 50px 40px;
+	position: relative;
+}
+
+.services-tabs {
+	margin-bottom: 30px;
+}
+
+.services-tabs__text {
+	width: 230px;
+	font-weight: 400;
+	color: #000;
+	font-size: 15px;
+	line-height: 130%;
+	margin: 33px 0 16px;
+}
+
+.services-tabs__title_short {
+	width: 200px;
+}
+
+.government-relation {
+	margin-bottom: 35px;
+}
+
+.services-tebs__price {
+	display: block;
+	font-weight: 900;
+	font-size: 20px;
+	line-height: 130%;
+	letter-spacing: 0.01em;
+	color: #26AFFF;
+	margin-bottom: 32px;
+}
+
+#services-tabs__corp:after {
+	content: url('..//img/servisec-pic/services-img-1.png');
+	position: absolute;
+	bottom: 25px;
+	right: 25px;
+}
+
+#services-tabs__idea:after {
+	content: url('..//img/servisec-pic/services-idea-1.png');
+	position: absolute;
+	bottom: 25px;
+	right: 25px;
+}
+
+#services-tabs__internet:after {
+	content: url('..//img/servisec-pic/services-internet-1.png');
+	position: absolute;
+	bottom: 25px;
+	right: 25px;
+}
+
+#services-tabs__shout:after {
+	content: url('..//img/servisec-pic/services-shout-1.png');
+	position: absolute;
+	bottom: 25px;
+	right: 25px;
+}
+
+#services-tabs__business:after {
+	content: url('..//img/servisec-pic/services-business-1.png');
+	position: absolute;
+	bottom: 25px;
+	right: 25px;
+}
+
+#services-tabs__target:after {
+	content: url('..//img/servisec-pic/services-target-1.png');
+	position: absolute;
+	bottom: 25px;
+	right: 25px;
+}
+
+/* - - - - - - Services page end - - - - - - */
+
+/* - - - - - - Client page start - - - - - - */
+
+.client-main {
+	padding: 150px 0 40px;
+}
+
+.client-main__title span {
+	text-transform: none;
+	font-size: 21px;
+	display: block;
+}
+
+.reviews {
+	padding: 40px 0 150px;
+}
+
+.review {
+	box-shadow: 0px 5px 30px rgba(206, 218, 228, 0.6);
+	border-radius: 2px;
+	padding: 60px 100px 60px 245px;
+	position: relative;
+
+}
+
+.review:not(:last-child) {
+	margin-bottom: 60px;
+}
+
+.review__photo {
+	position: absolute;
+	top: 30px;
+	left: -40px;
+}
+
+.review__inst {
+	background-color: #fff;
+	box-shadow: 0px 5px 20px rgba(0, 163, 255, 0.4);
+	border-radius: 3px;
+	padding: 10px;
+	position: absolute;
+	top: 240px;
+	left: 140px;
+}
+
+.review span {
+	background: #26AFFF;
+	box-shadow: 0px 5px 20px rgba(0, 163, 255, 0.4);
+	border-radius: 2px;
+	color: #fff;
+	padding: 5px 18px 5px 19px;
+	position: absolute;
+	top: 40px;
+	right: 40px;
+}
+
+.reviews__title {
+	text-transform: none;
+	margin-bottom: 22px;
+}
+
+.review__quote {
+	max-width: 685px;
+}
+
+.review__cite {
+	display: block;
+	font-style: normal;
+}
+
+.review__cite:not(:last-child) {
+	margin-bottom: 20px;
+}
+
+/* - - - - - - Client page end - - - - - - */
+
+/* - - - - - - Contact page start - - - - - - */
+
+.container-fluid {
+	padding: 150px 0;
+}
+
+.contacts-section {
+	position: relative;
+}
+
+#map {
+	width: 100%;
+	height: 411px;
+}
+
+.contacts {
+	background-color: #fff;
+	position: absolute;
+	top: 0;
+	right: 0;
+}
+
+.contacts__title {
+	color: #000;
+}
+
 /* - - - - - - Media Queries - - - - - - */
 
 /* 992 - 1200 px */
@@ -1209,6 +1411,13 @@ img {
 	/* - Company-page - */
 	.change {
 		padding-top: 0;
+	}
+	/* - Services-page - */
+	.services {
+		padding: 100px 0;
+	}
+	.case__text_services {
+		max-width: 481px;
 	}
 }
 
@@ -1429,7 +1638,11 @@ img {
 	}
 	.circle__percentage {
     top: 30%;
-	}	
+	}
+	/* - Services-Page - */
+	.services-tabs {
+		margin: 0 auto 30px;
+	}
 }
 
 /* 414 - 576 px */
@@ -1514,7 +1727,29 @@ img {
 	}
 	.circl {
     	width: 69%;
-    }
+	}
+	/* - Services-page - */
+	.services-tabs__btn {
+		padding: 15px 30px 14px;
+	}
+	#services-tabs__corp:after {
+		right: 15px;
+	}
+	#services-tabs__idea:after {
+		right: 15px;
+	}
+	#services-tabs__internet:after {
+		right: 15px;
+	}
+	#services-tabs__shout:after {
+		right: 15px;
+	}
+	#services-tabs__business:after {
+		right: 15px;
+	}
+	#services-tabs__target:after {
+		right: 15px;
+	}
 }
 	
 
